# unitree_sdk2_learning

./: README.md
unitree_sdk2-cpp_learn/: CMakeLists.txt
unitree_sdk2-cpp_learn/Test06/: CMakeLists.txt  publisher.cpp  subscriber.cpp
unitree_sdk2-cpp_learn/Test06/idl_generated/: HelloWorldData.cpp  HelloWorldData.hpp
unitree_sdk2-cpp_learn/Test07/: CMakeLists.txt  publisher.cpp  subscriber.cpp
unitree_sdk2-cpp_learn/Test07/idl_generate/: CMakeLists.txt  HelloWorldData.idl
unitree_sdk2-cpp_py_learn/cpp_publisher/: CMakeLists.txt  publisher.cpp  user_data.idl
unitree_sdk2-cpp_py_learn/cpp_publisher/idl_files/: user_data.cpp  user_data.hpp
unitree_sdk2-cpp_py_learn/py_subscriber/messages/: user_data.py
unitree_sdk2-cpp_py_learn/py_subscriber/src/: py_subscriber.py
unitree_sdk2-py_learn/helloworld/messages/: user_data.py
unitree_sdk2-py_learn/helloworld/src/: publisher.py  subscriber.py
unitree_sdk2-ros2_learn/helloworld_ws/install/: local_setup.sh  setup.sh
unitree_sdk2-ros2_learn/helloworld_ws/install/helloworld_cpp_pkg/share/ament_index/resource_index/package_run_dependencies/: helloworld_cpp_pkg
unitree_sdk2-ros2_learn/helloworld_ws/install/helloworld_cpp_pkg/share/ament_index/resource_index/parent_prefix_path/: helloworld_cpp_pkg
unitree_sdk2-ros2_learn/helloworld_ws/install/helloworld_cpp_pkg/share/helloworld_cpp_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
unitree_sdk2-ros2_learn/helloworld_ws/install/helloworld_cpp_pkg/share/helloworld_cpp_pkg/cmake/: helloworld_cpp_pkgConfig.cmake
unitree_sdk2-ros2_learn/helloworld_ws/install/helloworlddata_interfaces/include/helloworlddata_interfaces/helloworlddata_interfaces/msg/: hello_world_data.h  hello_world_data.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
unitree_sdk2-ros2_learn/helloworld_ws/install/helloworlddata_interfaces/include/helloworlddata_interfaces/helloworlddata_interfaces/msg/detail/: hello_world_data__builder.hpp  hello_world_data__functions.c  hello_world_data__functions.h  hello_world_data__rosidl_typesupport_fastrtps_c.h  hello_world_data__rosidl_typesupport_fastrtps_cpp.hpp  hello_world_data__rosidl_typesupport_introspection_c.h  hello_world_data__struct.h  hello_world_data__struct.hpp  hello_world_data__traits.hpp  hello_world_data__type_support.c  hello_world_data__type_support.cpp  hello_world_data__type_support.h  hello_world_data__type_support.hpp
unitree_sdk2-ros2_learn/helloworld_ws/install/helloworlddata_interfaces/share/ament_index/resource_index/rosidl_interfaces/: helloworlddata_interfaces
unitree_sdk2-ros2_learn/helloworld_ws/install/helloworlddata_interfaces/share/helloworlddata_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
unitree_sdk2-ros2_learn/helloworld_ws/install/helloworlddata_interfaces/share/helloworlddata_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_helloworlddata_interfaces__rosidl_generator_cExport-noconfig.cmake  export_helloworlddata_interfaces__rosidl_generator_cExport.cmake  export_helloworlddata_interfaces__rosidl_generator_cppExport.cmake  export_helloworlddata_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_helloworlddata_interfaces__rosidl_generator_pyExport.cmake  export_helloworlddata_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_helloworlddata_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_helloworlddata_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_helloworlddata_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  helloworlddata_interfacesConfig.cmake  helloworlddata_interfaces__rosidl_typesupport_cExport-noconfig.cmake  helloworlddata_interfaces__rosidl_typesupport_cExport.cmake  helloworlddata_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  helloworlddata_interfaces__rosidl_typesupport_cppExport.cmake  helloworlddata_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  helloworlddata_interfaces__rosidl_typesupport_introspection_cExport.cmake  helloworlddata_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  helloworlddata_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
unitree_sdk2-ros2_learn/helloworld_ws/install/helloworlddata_interfaces/share/helloworlddata_interfaces/msg/: HelloWorldData.idl  HelloWorldData.msg
unitree_sdk2-ros2_learn/helloworld_ws/src/helloworld_cpp_pkg/: CMakeLists.txt
unitree_sdk2-ros2_learn/helloworld_ws/src/helloworld_cpp_pkg/include/helloworld_cpp_pkg/: HelloWorldData.hpp
unitree_sdk2-ros2_learn/helloworld_ws/src/helloworld_cpp_pkg/src/: HelloWorldData.cpp  helloword_cpp_pub.cpp  helloworld_cpp_pub1.cpp  helloworld_cpp_pub2.cpp  helloworld_cpp_sub.cpp  helloworld_cpp_sub2.cpp
unitree_sdk2-ros2_learn/helloworld_ws/src/helloworlddata_interfaces/: CMakeLists.txt  package.xml
